--- a/EBooks/src/main/resources/templates/index.html
+++ b/EBooks/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,11 +9,37 @@
     <title th:text="${title}"></title>
 
     <link rel="stylesheet" th:href="@{/css/style.css}">
-
+    <link crossorigin="anonymous"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 <div th:replace="~{fragments/header}"></div>
 
+<div class="book-wrapper container my-5">
 
+    <div class="row mt-5">
+        <div class="d-flex justify-content-start align-items-center gap-4">
+            <div class="card" style="width: 20rem;" th:each="book: ${books}">
+                <img th:src="${book.getThumbnailPath()}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${book.getTitle()}"></h5>
+                    <p class="card-text text-secondary" th:text="${book.getDescription()}"></p>
+                    <p class="card-text" th:text="${book.getAuthor()}"></p>
+                    <div class="text-end">
+                        <a href="#" class="btn btn-primary">Read More</a>
+                        <a th:href="@{/book/download/{id}(id=${book.getId()})}" target="_blank" class="btn">Download</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
